Header/Footer started
2025-03-05
Begun on the header and footer with some basic icons

--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>AJR - Start</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <grid1> 
+    <header>
+      <div class="hDiv">
+        <img src="img/main/menuBlack.png" alt="AJR Logo">
+      </div>
+      <div class="hDiv">
+        <img src="img/main/logoBlack.png" alt="AJR Logo">
+      </div>
+      <div class="hDiv">
+        <img src="img/main/cartBlack.png" alt="AJR Logo">
+      </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+      <div class="fDiv">
+        <img src="img/main/logoBlack.png" alt="AJR Logo">
+        <h2>AJR 2025 C</h2>
+      </div>
+      <div class="fDiv">
+        <img src="img/social/spotifyBlack.png" alt="Spotify">
+      </div>
+    </footer>
+  </grid1>
 </body>
 </html>
