Header/Footer + Menu 99%
2025-03-10
Footer and header is almost entirely done. Aswell as most of the menu.

--- a/index.html
+++ b/index.html
@@ -7,30 +7,48 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <nav class="menu">
+    <ul class="menuText">
+        <li><a class="menuText" href="#">Start</a></li>
+        <li><a class="menuText" href="#">Music</a></li>
+        <li><a class="menuText" href="#">Merch</a></li>
+        <li><a class="menuText" href="#">Concerts</a></li>
+    </ul>
+  </nav>
+
+  <div class="fade-layer"></div>
+
   <grid1> 
     <header>
-      <div class="hDiv">
-        <img src="img/main/menuBlack.png" alt="AJR Logo">
+      <div class="menu-button">
+        <img src="img/main/menuIcon.png" alt="Menu">
       </div>
       <div class="hDiv">
-        <img src="img/main/logoBlack.png" alt="AJR Logo">
+        <img src="img/main/logo.png" alt="AJR Logo">
       </div>
       <div class="hDiv">
-        <img src="img/main/cartBlack.png" alt="AJR Logo">
+        <img src="img/main/cartIcon.png" alt="Cart">
       </div>
     </header>
-    <main>
 
-    </main>
+    <index>
+
+    </index>
+
     <footer>
       <div class="fDiv">
-        <img src="img/main/logoBlack.png" alt="AJR Logo">
-        <h2>AJR 2025 C</h2>
+        <img src="img/main/logo.png" alt="AJR Logo">
+        <h2 class="fText">AJR 2025 ©</h2>
       </div>
       <div class="fDiv">
-        <img src="img/social/spotifyBlack.png" alt="Spotify">
+        <img src="img/social/spotifyIcon.png" alt="Spotify">
+        <img src="img/social/youtubeIcon.png" alt="Youtube">
+        <img src="img/social/instagramIcon.png" alt="Instagram">
       </div>
     </footer>
   </grid1>
+
+  <script src="js/main.js"></script>
 </body>
 </html>
