--- a/merch.html
+++ b/merch.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AJR - Start</title>
+  <title>AJR - Merch</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
   <nav class="menu">
     <ul class="menuText">
+        <li><a class="menuText" href="index.html">Start</a></li>
         <li><a class="menuText" href="music.html">Music</a></li>
-        <li><a class="menuText" href="merch.html">Merch</a></li>
         <li><a class="menuText" href="concerts.html">Concerts</a></li>
     </ul>
   </nav>
