--- a/index.html
+++ b/index.html
@@ -32,7 +32,31 @@
     </header>
 
     <index>
-
+      <div class="startInfo">
+        <img class="startBg" src="img/misc/ajrPhoto1.jpg" alt="AJR members">
+        <div class="startPart">
+          <h1 class="startHeader">We Are Ajr</h1>
+          <p class="startPara">Re-envisioning what pop can be in the 21st century, AJR unassumingly emerged as a ubiquitous hit-making outlier and one of the biggest indie bands in the world. Since 2012, 
+            the multiplatinum indie pop trio—Adam [bass, vocals], Jack [vocals, guitar], and Ryan [ukulele, piano, vocals]—have generated billions of streams and earned one triple-platinum single, 
+            one double-platinum single, four platinum singles, and one platinum album. 2019's Neotheater marked their biggest first-week debut, bowing at #8 on the Billboard Top 200, 
+            #1 on the Top Alternative Albums Chart, and #1 on the Top Rock Albums Chart. Cemented as part of the modern zeitgeist, Spotify touted “Sober Up” [feat. Rivers Cuomo] among the “Best Rock Songs of the 2010s,” 
+            while Apple Music included “Weak” on its “Best Alt Songs of the 2010s.” Not to mention, they remain one of the “500 Most-Listened to Artists” on Spotify. On the heels of Neotheater, 
+            they dropped the 2020 platinum blockbuster “BANG!”, which they performed on TODAY, The Ellen DeGeneres Show, and even at the Macy.s Thanksgiving Day Parade and raced up the Alternative and Pop Radio charts. 
+            Now, the band has opened up their world like never before on their fourth full-length album, OK ORCHESTRA.</p>
+        </div>
+      </div>
+      <div class="startItem">
+        <img class="startBg" src="img/misc/neotheatre.jpg" alt="Neotheatre">
+      </div>
+      <div class="startItem">
+        <img class="startBg" src="img/misc/concert1.jpeg" alt="Concert">
+      </div>
+      <div class="startItem">
+        <img class="startBg" src="img/misc/neotheatre.jpg" alt="Neotheatre">
+      </div>
+      <div class="startItem">
+        <img class="startBg" src="img/misc/neotheatre.jpg" alt="Neotheatre">
+      </div>
     </index>
 
     <footer>
