--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AJR - Music</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/universal.css">
 </head>
 <body>
 
@@ -21,13 +21,13 @@
   <grid1> 
     <header>
       <div class="menu-button">
-        <img src="img/main/menuIcon.png" alt="Menu">
+        <img src="img/icons/menuIcon.png" alt="Menu">
       </div>
       <div class="hDiv">
-        <img src="img/main/logo.png" alt="AJR Logo">
+        <img src="img/icons/logo.png" alt="AJR Logo">
       </div>
       <div class="hDiv">
-        <img src="img/main/cartIcon.png" alt="Cart">
+        <img src="img/icons/cartIcon.png" alt="Cart">
       </div>
     </header>
 
@@ -37,7 +37,7 @@
 
     <footer>
       <div class="fDiv">
-        <img src="img/main/logo.png" alt="AJR Logo">
+        <img src="img/icons/logo.png" alt="AJR Logo">
         <h2 class="fText">AJR 2025 ©</h2>
       </div>
       <div class="fDiv">
