--- a/index.html
+++ b/index.html
@@ -34,12 +34,28 @@
 
     <index>
       <div id="infoItem" class="startItem">
-        <img class="startBg" src="img/main/ajrPhoto1.jpg" alt="Ajr Photo">
+        <img id="infoBg" class="startBg" src="img/start/ajrPhoto1.jpg" alt="ajr Photo">
+        <div id="infoContent">
+          <h1 id="infoHeader">We Are AJR</h1>
+          <p id="infoPara">AJR, the indie pop band of brothers Adam, Jack, and Ryan Met, rose from New York street performances to global fame with hits like "I'm Ready" and "Bang!" Known for self-producing their music, AJR's  albums—The Click, Neotheater, OK Orchestra, and The Maybe Man—blend pop with introspective themes. Beyond music, AJR supports philanthropy, notably Adam's climate-focused non-profit, Planet Reimagined.</p>
+        </div>
       </div>
-      <div class="startItem"></div>
-      <div class="startItem"></div>
-      <div class="startItem"></div>
-      <div class="startItem"></div>
+      <div class="startItem">
+        <img class="startBg" src="img/start/concert1.jpg" alt="concert photo">
+        <h1 class="startHeader">New Concert Coming Soon</h1>
+      </div>
+      <div class="startItem">
+        <img class="startBg" src="img/start/concert2.jpg" alt="live performance">
+        <h1 class="startHeader">Birthday Party Live</h1>
+      </div>
+      <div class="startItem">
+        <img class="startBg" src="img/start/neotheatre.jpg" alt="neotheatre cover">
+        <h1 class="startHeader">Neotheatre Anniversary</h1>
+      </div>
+      <div class="startItem">
+        <img class="startBg" src="img/start/giantHead.jpg" alt="giant jack head">
+        <h1 class="startHeader">Making A Giant Jack Head</Head></h1>
+      </div>
     </index>
 
     <footer>
