--- a/merch.html
+++ b/merch.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AJR - Music</title>
+  <title>AJR - Merch</title>
   <link rel="stylesheet" href="css/universal.css">
+  <link rel="stylesheet" href="css/merch.css">
 </head>
 <body>
 
@@ -18,7 +19,7 @@
 
   <div class="fade-layer"></div>
 
-  <grid1> 
+  <grid2> 
     <header>
       <div class="menu-button">
         <img src="img/icons/menuIcon.png" alt="Menu">
@@ -31,9 +32,71 @@
       </div>
     </header>
 
-    <index>
+    <section1>
+      <h1 id="merchHeader">Our Merch</h1>
+      <input type="text" placeholder="Search..">
+      <ul id="switchList">
+        <li class="switchItem">
+          <h2 class="switchHeader">T-Shirts</h2>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </li>
+        <li class="switchItem">
+          <h2 class="switchHeader">Hoodies</h2>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </li>
+        <li class="switchItem">
+          <h2 class="switchHeader">Sweaters</h2>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </li>
+        <li class="switchItem">
+          <h2 class="switchHeader">Jackets</h2>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </li>
+        <li class="switchItem">
+          <h2 class="switchHeader">Outerwear</h2>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </li>
+        <li class="switchItem">
+          <h2 class="switchHeader">Accessories</h2>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </li>
+        <li class="switchItem">
+          <h2 class="switchHeader">Misc</h2>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </li>
+        <li class="switchItem">
+          <h2 class="switchHeader">Illegal Goods</h2>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
+        </li>
+      </ul>
+    </section1>
+    <section2>
 
-    </index>
+    </section2>
 
     <footer>
       <div class="fDiv">
@@ -46,7 +109,7 @@
         <img src="img/social/instagramIcon.png" alt="Instagram">
       </div>
     </footer>
-  </grid1>
+  </grid2>
 
   <script src="js/main.js"></script>
 </body>
