--- a/merch.html
+++ b/merch.html
@@ -94,8 +94,40 @@
         </li>
       </ul>
     </section1>
-    <section2>
 
+    <section2>
+      <div class="merchItem">
+        <img class="merchImg" src="img/merch/AJR Crewneck.webp" alt="concert photo">
+        <h1 class="merchHeader">AJR Crewneck</h1>
+      </div>
+      <div class="merchItem">
+        <img class="merchImg" src="img/merch/AJR Scarf.webp" alt="concert photo">
+        <h1 class="merchHeader">AJR Scarf</h1>
+      </div>
+      <div class="merchItem">
+        <img class="merchImg" src="img/merch/Bummerland Hoodie.webp" alt="concert photo">
+        <h1 class="merchHeader">Bummerland Hoodie</h1>
+      </div>
+      <div class="merchItem">
+        <img class="merchImg" src="img/merch/Christmas Beanie.webp" alt="concert photo">
+        <h1 class="merchHeader">Christmas Beanie</h1>
+      </div>
+      <div class="merchItem">
+        <img class="merchImg" src="img/merch/Christmas Sweater.webp" alt="concert photo">
+        <h1 class="merchHeader">Christmas Sweater</h1>
+      </div>
+      <div class="merchItem">
+        <img class="merchImg" src="img/merch/Maybe Man Beanie.webp" alt="concert photo">
+        <h1 class="merchHeader">Maybe Man Beanie</h1>
+      </div>
+      <div class="merchItem">
+        <img class="merchImg" src="img/merch/Maybe Man Crewneck.webp" alt="concert photo">
+        <h1 class="merchHeader">Maybe Man Crewneck</h1>
+      </div>
+      <div class="merchItem">
+        <img class="merchImg" src="img/merch/Snowman T-shirt.webp" alt="concert photo">
+        <h1 class="merchHeader">Snowman T-Shirt</h1>
+      </div>
     </section2>
 
     <footer>
