Basically Finished Concerts
2025-03-29
Concert site is basically finished. The basic strucutre is there, but i could definetly improve it by adding polish. But it WORKS.

--- a/concerts.html
+++ b/concerts.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AJR - Concerts</title>
   <link rel="stylesheet" href="css/universal.css">
+  <link rel="stylesheet" href="css/concerts.css">
 </head>
 <body>
 
@@ -31,9 +32,26 @@
       </div>
     </header>
 
-    <index>
+    <concert>
+      <div id="concertStart">
+        <h1 id="concertHeader">Our Concerts</h1>
+      </div>
 
-    </index>
+      <div class="concertItem">
+        <h2 class="concertHeader1">Maybe Man Tour</h2>
+        <h3 class="concertHeader2">2025.06.17</h3>
+        <h3 class="concertHeader2">Shoreline Amphitheatre, Mountain View, CA</h3>
+
+        <h2 class="concertTicket">Tickets</h2>
+      </div>
+      <div class="concertItem">
+        <h2 class="concertHeader1">Maybe Man Tour</h2>
+        <h3 class="concertHeader2">2025.06.17</h3>
+        <h3 class="concertHeader2">Shoreline Amphitheatre, Mountain View, CA</h3>
+
+        <h2 class="concertTicket">Tickets</h2>
+      </div>
+    </concert>
 
     <footer>
       <div class="fDiv">
