--- a/music.html
+++ b/music.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AJR - Music</title>
   <link rel="stylesheet" href="css/universal.css">
+  <link rel="stylesheet" href="css/music.css">
 </head>
 <body>
 
@@ -31,9 +32,84 @@
       </div>
     </header>
 
-    <index>
+    <music>
+      <div id="musicStart">
+        <h1 id="musicHeader">Our Music</h1>
+      </div>
 
-    </index>
+      <div class="musicItem">
+        <img class="musicCover" src="/img/music/thedjiscryingforhelp.jpg" alt="the dj is crying for help cover">
+        <h2 class="musicHeader">The Dj Is Crying For Help</h2>
+        <div class="musicLinks">
+          <a href="https://open.spotify.com/track/07gQSDcN9CWD64CsfQ53DT" target="_blank"><img class="musicLink" src="img/social/spotifyIcon.png" alt="spotify link"></a>
+          <a href="https://www.youtube.com/watch?v=8L98ODoZ0kE" target="_blank"><img class="musicLink" src="img/social/youtubeIcon.png" alt="youtube link"></a>
+          <a href="https://www.instagram.com/ajrbrothers/reel/ClFwcaTAOEr/" target="_blank"><img class="musicLink" src="img/social/instagramIcon.png" alt="instagram link"></a>
+        </div>
+      </div>
+      <div class="musicItem">
+        <img class="musicCover" src="/img/music/100baddays.jpg" alt="100 bad days">
+        <h2 class="musicHeader">Way Less Sad</h2>
+        <div class="musicLinks">
+          <a href="https://open.spotify.com/track/17FK4etx1u2NK60cptINMS" target="_blank"><img class="musicLink" src="img/social/spotifyIcon.png" alt="spotify link"></a>
+          <a href="https://www.youtube.com/watch?v=2c4dB52ehAE" target="_blank"><img class="musicLink" src="img/social/youtubeIcon.png" alt="youtube link"></a>
+          <a href="https://www.instagram.com/ajrbrothers/p/Btek-0YhKle/" target="_blank"><img class="musicLink" src="img/social/instagramIcon.png" alt="instagram link"></a>
+        </div>
+      </div>
+      <div class="musicItem">
+        <img class="musicCover" src="/img/music/thedjiscryingforhelp.jpg" alt="the dj is crying for help cover">
+        <h2 class="musicHeader">The Dj Is Crying For Help</h2>
+        <div class="musicLinks">
+          <a href="https://open.spotify.com/track/07gQSDcN9CWD64CsfQ53DT" target="_blank"><img class="musicLink" src="img/social/spotifyIcon.png" alt="spotify link"></a>
+          <a href="https://www.youtube.com/watch?v=8L98ODoZ0kE" target="_blank"><img class="musicLink" src="img/social/youtubeIcon.png" alt="youtube link"></a>
+          <a href="https://www.instagram.com/ajrbrothers/reel/ClFwcaTAOEr/" target="_blank"><img class="musicLink" src="img/social/instagramIcon.png" alt="instagram link"></a>
+        </div>
+      </div>
+      <div class="musicItem">
+        <img class="musicCover" src="/img/music/100baddays.jpg" alt="100 bad days">
+        <h2 class="musicHeader">Way Less Sad</h2>
+        <div class="musicLinks">
+          <a href="https://open.spotify.com/track/17FK4etx1u2NK60cptINMS" target="_blank"><img class="musicLink" src="img/social/spotifyIcon.png" alt="spotify link"></a>
+          <a href="https://www.youtube.com/watch?v=2c4dB52ehAE" target="_blank"><img class="musicLink" src="img/social/youtubeIcon.png" alt="youtube link"></a>
+          <a href="https://www.instagram.com/ajrbrothers/p/Btek-0YhKle/" target="_blank"><img class="musicLink" src="img/social/instagramIcon.png" alt="instagram link"></a>
+        </div>
+      </div>
+      <div class="musicItem">
+        <img class="musicCover" src="/img/music/thedjiscryingforhelp.jpg" alt="the dj is crying for help cover">
+        <h2 class="musicHeader">The Dj Is Crying For Help</h2>
+        <div class="musicLinks">
+          <a href="https://open.spotify.com/track/07gQSDcN9CWD64CsfQ53DT" target="_blank"><img class="musicLink" src="img/social/spotifyIcon.png" alt="spotify link"></a>
+          <a href="https://www.youtube.com/watch?v=8L98ODoZ0kE" target="_blank"><img class="musicLink" src="img/social/youtubeIcon.png" alt="youtube link"></a>
+          <a href="https://www.instagram.com/ajrbrothers/reel/ClFwcaTAOEr/" target="_blank"><img class="musicLink" src="img/social/instagramIcon.png" alt="instagram link"></a>
+        </div>
+      </div>
+      <div class="musicItem">
+        <img class="musicCover" src="/img/music/100baddays.jpg" alt="100 bad days">
+        <h2 class="musicHeader">Way Less Sad</h2>
+        <div class="musicLinks">
+          <a href="https://open.spotify.com/track/17FK4etx1u2NK60cptINMS" target="_blank"><img class="musicLink" src="img/social/spotifyIcon.png" alt="spotify link"></a>
+          <a href="https://www.youtube.com/watch?v=2c4dB52ehAE" target="_blank"><img class="musicLink" src="img/social/youtubeIcon.png" alt="youtube link"></a>
+          <a href="https://www.instagram.com/ajrbrothers/p/Btek-0YhKle/" target="_blank"><img class="musicLink" src="img/social/instagramIcon.png" alt="instagram link"></a>
+        </div>
+      </div>
+      <div class="musicItem">
+        <img class="musicCover" src="/img/music/thedjiscryingforhelp.jpg" alt="the dj is crying for help cover">
+        <h2 class="musicHeader">The Dj Is Crying For Help</h2>
+        <div class="musicLinks">
+          <a href="https://open.spotify.com/track/07gQSDcN9CWD64CsfQ53DT" target="_blank"><img class="musicLink" src="img/social/spotifyIcon.png" alt="spotify link"></a>
+          <a href="https://www.youtube.com/watch?v=8L98ODoZ0kE" target="_blank"><img class="musicLink" src="img/social/youtubeIcon.png" alt="youtube link"></a>
+          <a href="https://www.instagram.com/ajrbrothers/reel/ClFwcaTAOEr/" target="_blank"><img class="musicLink" src="img/social/instagramIcon.png" alt="instagram link"></a>
+        </div>
+      </div>
+      <div class="musicItem">
+        <img class="musicCover" src="/img/music/100baddays.jpg" alt="100 bad days">
+        <h2 class="musicHeader">Way Less Sad</h2>
+        <div class="musicLinks">
+          <a href="https://open.spotify.com/track/17FK4etx1u2NK60cptINMS" target="_blank"><img class="musicLink" src="img/social/spotifyIcon.png" alt="spotify link"></a>
+          <a href="https://www.youtube.com/watch?v=2c4dB52ehAE" target="_blank"><img class="musicLink" src="img/social/youtubeIcon.png" alt="youtube link"></a>
+          <a href="https://www.instagram.com/ajrbrothers/p/Btek-0YhKle/" target="_blank"><img class="musicLink" src="img/social/instagramIcon.png" alt="instagram link"></a>
+        </div>
+      </div>
+    </music>
 
     <footer>
       <div class="fDiv">
